use dvh to fix chrome mobile height overflow

--- a/packages/coffee.chealt.com/src/components/scan/scan.css
+++ b/packages/coffee.chealt.com/src/components/scan/scan.css
@@ -1,7 +1,7 @@
 #camera #video {
   display: block;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   background-color: black;
 }
 
